Set up Maven to use 16 preview